# northwindai_project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Project_Idea.md  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  config.py  main.py
data_generation/: README.md  __init__.py  config.py  contract_documents.py  contracts.py  docs.py  finance.py  generate.py  loader.py  logistics.py  masters.py  orders.py  reset.py  scenarios.py
db/: README.md
directives/: phase-01-repository-setup.md  phase-02-database-schema-foundation.md  phase-03-synthetic-data-and-controlled-scenarios.md  phase-04-sql-only-top-customers-ladder-step.md  phase-05-neo4j-projection-supplier-products-ladder-step.md  phase-06-event-nodes-and-plausible-links.md  phase-07-contract-term-events-and-qdrant-retrieval.md  phase-08-governed-query-generation.md  phase-09-agentic-orchestrator.md  phase-10-synthesis-and-evaluation.md  phase-11-langgraph-langchain-migration.md
docs/: ISSUES.md  PRD.md  RUNBOOK.md
evaluation/: __init__.py
tests/: __init__.py  test_agent_catalog.py  test_agent_eval_runner.py  test_agent_supervisor.py  test_agent_workers.py  test_complaint_issue_events.py  test_contract_document_paths.py  test_contract_documents.py  test_controlled_scenarios.py  test_cypher_executor.py  test_cypher_validator.py  test_event_derivation.py  test_graph_projection.py  test_health.py  test_ladder_contract_lead_times.py  test_ladder_shipment_delays.py  test_ladder_supplier_products.py  test_ladder_top_customers.py  test_plausible_links.py  test_query_executor.py  (+3 more)
(+85 files in other folders)
