[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "northwindai"
version = "0.1.0"
description = "Mini-ERP GraphRAG intelligence suite."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "neo4j>=5.20,<6.0",
    "qdrant-client>=1.9,<2.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "faker>=25,<40",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "data_generation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
